2002-10-06  Derek Atkins  <derek@ihtfp.com>
	* Rename a bunch of reports as per Chris Lyttle's suggestions
	
2002-10-06  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-utils.c (gnc_handle_date_accelerator): If
	an alphabetic character has any modifiers applied to it, pass it
	on to the window manager.  Fixes 88520.

2002-10-05  David Hampton  <hampton@employees.org>

	* src/engine/gnc-engine-util.c (gnc_set_xxx_message): 
	(gnc_send_gui_xxx): New routines that let the engine display gui
	warning/error messages.  The callbacks must be initialized by the
	gui layer.

	* src/gnome-utils/gnc-gui-query.c: Reorganize some of the
	gnc_xxx_dialog routines. Add a couple of new routines that take a
	va_list but no window.

	* src/gnome-utils/gncmod-gnome-utils.c: Initialize the gui
	callbacks in the engine.

	* src/gnome/glade/newuser.glade: Remove the version number. Its
	already in the splash screen.

	* src/scm/main.scm (gnc:main): Erase the splash screen before
	starting the new user dialog.

2002-10-05  Derek Atkins <derek@ihtfp.com>
	* Fix the autoconf-2.13/2.52/2.53 problems -- Gnucash should now
	  work on all versions of auto-tools, although it now requires GnuMake.
	
	* configure.in -- just pass LIBOBJS directly to the Makefile; pass
	  a sed script that uses '$U' (which is a 2.53ism, but works right
	  on 2.13) to the Makefile.
	* lib/libc/Makefile.am -- Use LIBOBJS and GnuMake's $(shell) syntax
	  to create the list of libobjects to be linked into "libc-missing"

	* Check for gettext in -lintl for MacOS

	* Peter O'Gorman's patch for fixing libtool on darwin

	* Implement a core CheckboxCell register type (note, still needs a
	  pretty Gnome implementation)

	* use the checkbox cell in the EntryLedger

	* make the Invoiced? cell mutable under limited conditions
	
2002-10-03  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.[hc]: Separate the
	Get-Transaction related HBCI functions into this file. Much more