@@ -1,5 +1,7 @@
 2002-10-06  Derek Atkins  <derek@ihtfp.com>
 	* Rename a bunch of reports as per Chris Lyttle's suggestions
+
+	* report-gnome/report-gnome.scm -- Create sorted menu items
 	
 2002-10-06  David Hampton  <hampton@employees.org>
 
